5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1884_1645.log
== TEST (2019-07-04 19:05:04) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]%2==0):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for in i range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- ERROR:
File "XXXX", line 11
    for in i range(size(t)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:05:05) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]%2==0):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for in i range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- ERROR:
File "XXXX", line 11
    for in i range(size(t)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:05:42) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]%2==0):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:05:47) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]%2==0):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- EXECUTION TIME:
1.191
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
7
[0 1 2 3 4 5 7]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
5
[0 1 2 3 4]
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
7
[0 1 2 5 6 8 9]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:05:55) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]%2==0):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:06:07) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]%2==0):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:09:01) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:09:05) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- EXECUTION TIME:
0.86684
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1884/1645/main.py", line 13, in <module>
    v[g]=v[g]+b
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:09:51) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:09:54) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- EXECUTION TIME:
1.20616
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1884/1645/main.py", line 13, in <module>
    v[g]=v[g]+b
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:09:58) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:10:09) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- EXECUTION TIME:
0.945123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1884/1645/main.py", line 13, in <module>
    v[g]=v[g]+b
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:10:12) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- EXECUTION TIME:
3.57866
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1884/1645/main.py", line 13, in <module>
    v[g]=v[g]+b
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:10:14) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- EXECUTION TIME:
3.27948
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1884/1645/main.py", line 13, in <module>
    v[g]=v[g]+b
IndexError: index 5 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:10:16) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- EXECUTION TIME:
3.3132
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1884/1645/main.py", line 13, in <module>
    v[g]=v[g]+b
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:10:16) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- EXECUTION TIME:
2.77971
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1884/1645/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:10:30) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:14:17) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:14:44) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]%2==0):
		v[g]=v[g]+b
		g=g+1
	b=b+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:16:54) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]>=2000):
		v[g]=b
		g=g+1
	b=b+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:17:03) 
-- CODE:
from numpy import *
t=array(eval(input("diga o valor: ")))
p=0
for i in range(size(t)):
	if(t[i]>=2000):
		p=p+1
print(p)
v=zeros(p,dtype=int)
g=0
b=0
for i in range(size(t)):
	if(t[i]>=2000):
		v[g]=b
		g=g+1
	b=b+1
print(v)
-- EXECUTION TIME:
1.20633
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
[0 2 4 5]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
[0 2 4]
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
[0 5 6 7 9]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
